# ucxx

./: .gitignore  .pre-commit-config.yaml  LICENSE  RAPIDS_VERSION  README.md  VERSION  build.sh  build_and_run.sh  dependencies.yaml  fetch_rapids.cmake  pyproject.toml  test_cython.py  test_getters.pyx
.devcontainer/: README.md  (+2 more)
cpp/: CMakeLists.txt  CPPLINT.cfg
cpp/benchmarks/: CMakeLists.txt  perftest.cpp  send-recv.cpp
cpp/benchmarks/include/: buffer_interface.hpp
cpp/cmake/Modules/: ConfigureCUDA.cmake
cpp/doxygen/: Doxyfile  main_page.md
cpp/examples/: CMakeLists.txt  basic.cpp  request_attributes.cpp
cpp/include/ucxx/: address.h  address_builder.h  am_message.h  api.h  buffer.h  buffer_helper.h  component.h  config.h  constructors.h  context.h  context_builder.h  delayed_notification_request.h  delayed_submission.h  endpoint.h  endpoint_builder.h  endpoint_impl.h  exception.h  exception_py.h  future.h  header.h  inflight_requests.h  initializer.h  listener.h  listener_builder.h  log.h  memory_handle.h  memory_handle_builder.h  notification_request.h  notifier.h  remote_key.h  remote_key_builder.h  request.h  request_am.h  request_am_builder.h  request_am_recv_data.h  request_am_send.h  request_builder_base.h  request_data.h  request_endpoint_close.h  request_endpoint_close_builder.h  (+28 more)
cpp/include/ucxx/detail/: builder_utils.h  register_inflight_request.h
cpp/include/ucxx/experimental/: address_builder.h  builder_utils.h  context_builder.h  endpoint_builder.h  listener_builder.h  memory_handle_builder.h  remote_key_builder.h  request_am_builder.h  request_builder_base.h  request_endpoint_close_builder.h  request_flush_builder.h  request_mem_builder.h  request_stream_builder.h  request_tag_builder.h  request_tag_multi_builder.h  tag_probe_builder.h  worker_builder.h
cpp/include/ucxx/impl/: address.h  buffer.h  buffer_helper.h  component.h  config.h  context.h  delayed_submission.h  endpoint.h  header.h  inflight_requests.h  initializer.h  listener.h  log.h  notification_request.h  request.h  request_stream.h  request_tag.h  request_tag_multi.h  sockaddr_utils.h  utils.h  worker.h  worker_progress_thread.h
cpp/include/ucxx/internal/: request_am.h
cpp/python/: CMakeLists.txt
cpp/python/src/: exception.cpp  future.cpp  notifier.cpp  python_future.cpp  python_future_task_collector.cpp  worker.cpp
cpp/scripts/: run-cmake-format.sh
cpp/src/: address.cpp  address_builder.cpp  am_message.cpp  buffer.cpp  buffer_cccl.cpp  buffer_cccl.cu  component.cpp  config.cpp  context.cpp  context_builder.cpp  delayed_submission.cpp  endpoint.cpp  endpoint_builder.cpp  header.cpp  inflight_requests.cpp  initializer.cpp  listener.cpp  listener_builder.cpp  log.cpp  memory_handle.cpp  memory_handle_builder.cpp  remote_key.cpp  remote_key_builder.cpp  request.cpp  request_am.cpp  request_am_builder.cpp  request_am_recv_data.cpp  request_am_send.cpp  request_data.cpp  request_endpoint_close.cpp  request_endpoint_close_builder.cpp  request_flush.cpp  request_flush_builder.cpp  request_helper.cpp  request_mem.cpp  request_mem_builder.cpp  request_stream.cpp  request_stream_builder.cpp  request_tag.cpp  request_tag_builder.cpp  (+7 more)
cpp/src/experimental/: address_builder.cpp  context_builder.cpp  endpoint_builder.cpp  listener_builder.cpp  memory_handle_builder.cpp  remote_key_builder.cpp  request_am_builder.cpp  request_endpoint_close_builder.cpp  request_flush_builder.cpp  request_mem_builder.cpp  request_stream_builder.cpp  request_tag_builder.cpp  request_tag_multi_builder.cpp  tag_probe_builder.cpp  worker_builder.cpp
cpp/src/internal/: request_am.cpp
cpp/src/python/: exception.cpp  future.cpp  notifier.cpp  python_future.cpp  worker.cpp
cpp/src/utils/: callback_notifier.cpp  file_descriptor.cpp  python.cpp  sockaddr.cpp  ucx.cpp
cpp/tests/: CMakeLists.txt  buffer.cpp  component_builders.cpp  config.cpp  context.cpp  endpoint.cpp  header.cpp  listener.cpp  request.cpp  request_builders.cpp  rma.cpp  test_ucxx.cpp  ucxx_tests.cpp  utils.cpp  utils.h  worker.cpp
cpp/tests/include/: utils.h
python/: .flake8  .flake8.cython  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  versioneer.py
python/benchmarks/: send-recv-async.py  send-recv-sync.py  send-recv.py
python/distributed-ucxx/: LICENSE  README.md  distributed-ucxx-schema.yaml  distributed-ucxx.yaml  pyproject.toml  setup.py
python/distributed-ucxx/distributed_ucxx/: __init__.py  _version.py  config.py  distributed-ucxx-schema.yaml  distributed-ucxx.yaml  distributed_patches.py  ucxx.py  utils_test.py
python/examples/: basic.py
python/libucxx/: CMakeLists.txt  pyproject.toml
python/libucxx/libucxx/: __init__.py  _version.py  load.py
python/tests/: test_address_object.py  test_arr.py  test_cancel.py  test_config.py  test_endpoint.py  test_listener.py  test_probe.py  test_server_client.py  test_utils.py  utils.py
python/tests_async/: conftest.py  test_benchmark_cluster.py  test_config.py  test_custom_send_recv.py  test_disconnect.py  test_endpoint.py  test_from_worker_address.py  test_from_worker_address_error.py  test_info.py  test_multiple_nodes.py  test_probe.py  test_reset.py  test_send_recv.py  test_send_recv_two_workers.py  test_shutdown.py  test_tags.py  test_ucx_getters.py  test_version.py  utils.py
python/ucxx/: CMakeLists.txt  __init__.py  _version.py  continuous_ucx_progress.py  core.py  exceptions.py  pyproject.toml  testing.py  types.py  utils.py
python/ucxx/_lib/: CMakeLists.txt  __init__.pxd  __init__.py  arr.pxd  arr.pyi  arr.pyx  libucxx.pyx  tag.pyx  ucxx_api.pxd
python/ucxx/_lib_async/: __init__.py  application_context.py  continuous_ucx_progress.py  endpoint.py  exchange_peer_info.py  listener.py  notifier_thread.py  utils.py  utils_test.py
python/ucxx/benchmarks/: __init__.py  asyncssh.py  cudf_merge.py  send_recv.py  utils.py
python/ucxx/examples/: CMakeLists.txt  CPPLINT.cfg  basic.py  python_future_task.h  python_future_task_api.pxd  python_future_task_app.pyx
python/ucxx/ucxx/: __init__.py  _cuda_context.py  core.py  exceptions.py  testing.py  utils.py
(+274 files in other folders)
