# SPDX-FileCopyrightText: Copyright (c) 2023, NVIDIA CORPORATION & AFFILIATES.
# SPDX-License-Identifier: BSD-3-Clause


[build-system]

requires = [
    "wheel",
    "setuptools",
    "Cython>=0.29,<0.30",
]

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.py?$'
exclude = '''
/(
    thirdparty |
    \.eggs |
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''
